# cashu-zk-engine

./: .gitignore  README.md  Scarb.toml
.github/workflows/: build.yml  reference_tests.yml
src/: core.cairo  lib.cairo  main.cairo  utils.cairo
tests/references/: patterns.txt  reference_tests.sh
tests/references/bdhke-nutshell/: README.md  bdhke_nutshell.py  fmt.sh  pyproject.toml  run_nutshell.sh  run_reference_tests.sh
